# AI-Box

./: .cursorignore  .cursorrules  .env.backup_20251209_124213  .env.example  .env.sso  .env.sso.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  =0.9.0  AGENTS.md  AI-Box.code-workspace  AI_開發規範檢查清單.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  QUICK_START.md  README.md  UPLOAD_INSTRUCTIONS.md  check_code_quality.py  check_docs_references.py  check_files.js  cleanup_files.py  deploy_optimization.sh  diagnose_ka_agent.sh  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.qdrant.yml  docker-compose.seaweedfs-datalake.yml  docker-compose.seaweedfs.yml  docker-compose.yml  env.example  external_mcp_tools.yaml.example  generate_code_registry.py  gpu_benchmark_20260202_131458.json  gpu_benchmark_20260202_131650.json  grant_ai_consent.py  monitor_ka_agent.sh  opencode.json  (+11 more)
services/api/: .env.example  __init__.py  main.py  pyproject.toml
services/api/clients/: ollama_client.py
services/api/core/: __init__.py  response.py  settings.py  version.py
services/api/middleware/: __init__.py  error_handler.py  logging.py  prometheus.py  request_id.py
services/api/models/: agent_category.py  agent_display_config.py  agent_registration_request.py  audit_log.py  change_proposal.py  chat.py  chromadb.py  config.py  data_classification.py  data_consent.py  doc_edit_request.py  doc_generation_request.py  file_access_control.py  file_metadata.py  genai_request.py  genai_tenant_policy.py  genai_user_llm_secret.py  llm_model.py  (+21 more)
(+4005 files in other folders)
